--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -1,43 +1,44 @@
+{% load static %}
 {% load i18n %}
 
-<div class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+<div class="navbar bg-white navbar-expand-md fixed-top" style="border-bottom: 2px solid black">
   <div class="container">
     {% block topbar %}
-      {% block site_brand %}<a class="navbar-brand" href="{% url 'index' %}">{{ SITE_NAME }}</a>{% endblock site_brand %}
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-        <span class="fa fa-bars"></span>
+      {% block site_brand %}<a class="navbar-brand" href="{% url 'index' %}">
+        <img height="40px" src="{% static 'logo.png' %}">
+      </a>{% endblock site_brand %}
+
+      <form class="input-group w-50">
+        <input class="form-control" type="search" placeholder="{% trans 'Search' %}" aria-label="{% trans 'Search' %}">
+        <button class="btn btn-outline-secondary" type="button"><i class="bi bi-search"></i></button>
+      </form>
+
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
+        <span class="bi bi-list"></span>
       </button>
 
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        {% block nav %}
-          <ul class="navbar-nav mr-auto">
-            {% block nav_items %}
-              <li class="nav-item"><a class="nav-link" href="#tab_one">One</a></li>
-              <li class="nav-item"><a class="nav-link" href="#tab_two">Two</a></li>
-            {% endblock nav_items %}
-          </ul>
-        {% endblock nav %}
+      <div class="ms-auto flex-grow-0 collapse navbar-collapse" id="navbarSupportedContent">
         {% block account_bar %}
           <ul class="navbar-nav">
             {% if request.user.is_authenticated %}
-              <li class="navbar-text">
-                <i class="fa fa-user"></i> {{ request.user.short_name }}
+              <li class="nav-item">
+                <a class="nav-link" href="{% url 'users:me' %}">
+                  {% if request.user.avatar %}
+                    <img class="rounded-circle" style="height: 24px" alt="{% trans 'Avatar' %}" src="{{ request.user.avatar.url }}" />
+                  {% else %}
+                    <i class="bi bi-person-circle"></i>
+                  {% endif %}
+                  {{ request.user.username }}
+                </a>
               </li>
               <li class="nav-item">
-{#                            <a class="nav-link" href="{% url 'account_settings' %}"><i class="fa fa-cog"></i> {% trans "Settings" %}</a>#}
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" id="account_logout" href="{% url 'account_logout' %}"><i class="fa fa-power-off"></i> {% trans "Log out" %}</a>
+                <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Log out" %}</a>
               </li>
             {% else %}
               <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">{% trans "Log in" %}</a></li>
               <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
             {% endif %}
           </ul>
-
-          <form id="accountLogOutForm" style="display: none;" action="{% url 'account_logout' %}" method="POST">
-            {% csrf_token %}
-          </form>
         {% endblock %}
       </div>
     {% endblock topbar %}
