--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,6 +10,11 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <title>{% block title %}{% endblock title %}</title>
 
+      <link rel="apple-touch-icon" sizes="180x180" href="{% static 'apple-touch-icon.png' %}">
+      <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon-32x32.png' %}">
+      <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon-16x16.png' %}">
+      <link rel="manifest" href="{% static 'site.webmanifest' %}">
+
       <link rel="preconnect" href="https://fonts.gstatic.com">
 
       {% block style %}
@@ -20,7 +25,7 @@
     {% endblock head %}
   </head>
 
-  <body class="d-flex flex-column h-100">
+  <body class="h-100 d-flex flex-column bg-light">
     {% block body %}
       <header>
         {% block header %}
@@ -28,13 +33,25 @@
         {% endblock header %}
       </header>
 
-      <main>
-        <div class="container">
-          {% block main %}{% endblock main %}
-        </div>
-      </main>
+      <div class="container" style="padding-top: 5rem">
+        <div class="row gx-5">
+          <div class="col-3">
+            <aside class="bg-white">
+              {% block sidebar %}
+                {% include "_sidebar.html" %}
+              {% endblock sidebar %}
+            </aside>
+          </div>
 
-      <footer class="footer bg-light mt-auto py-3">
+          <div class="col-9">
+            <main class="bg-white">
+              {% block main %}{% endblock main %}
+            </main>
+          </div>
+        </div>
+      </div>
+
+      <footer class="footer mt-auto py-3">
         {% block footer %}
           {% include "_footer.html" %}
         {% endblock footer %}
@@ -45,7 +62,7 @@
       {% endblock messages %}
 
       {% block script %}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>        <!-- JavaScript Bundle with Popper -->
       {% endblock script %}
     {% endblock body %}
   </body>
