Fix some bugs, add subscriptions

--- a/templates/answers/list.html
+++ b/templates/answers/list.html
@@ -8,45 +8,49 @@
   {{ block.super }}
   {% include '_countries.html' with url_name='answers:index' %}
 
-  {# TODO: Split with sub templates #}
-  <div class="m-3">
-    <header class="h3">{{ question.en_text }}</header>
-    <span>{{ question.en_text }}</span>
+  {% if question %}
+    {# TODO: Split with sub templates #}
+    <div class="m-3">
+      <header class="h3">{{ question.en_text }}</header>
+      <span>{{ question.en_text }}</span>
 
-    <hr />
+      <hr />
 
-    <i class="bi bi-star{% if question|liked_by_me:request %}-filled{% endif %}"></i>
-    {{ question.country }} <i class="bi bi-coin"></i> {{ question.price }}
+      <a href="{% url 'likes:toggle_subscription' country_id=question.country_id question_id=question.id %}">
+        <i class="bi bi-star{% if question|liked_by_me:request %}-fill{% endif %}"></i>
+      </a>
+      {{ question.country }} <i class="bi bi-coin"></i> {{ question.price }}
 
-    {% if question.status != 'closed' %}
-      <span class="text-{{ question|question_status_class }}">
-        <i class="bi bi-{{ question|question_status_icon }}"></i>
-        {{ question.get_status_display }}
-      </span>
-    {% endif %}
-
-    {% if question.status in 'answered closed'|split %}
-      <i class="bi bi-chat-left"></i>{{ question.comments|length }} {% trans 'Comments' %}
-    {% endif %}
-
-    {% if question.status == 'closed' %}
-      <i class="bi bi-hand-thumbs-up"></i>{{ question.likes|length }} {% trans 'Likes' %}
-      <i class="bi bi-hand-thumbs-down"></i>{{ question.dislikes|length }} {% trans 'Dislikes' %}
-    {% endif %}
-
-    {% if question.status in 'published answered closed'|split %}
-      <i class="bi bi-eye"></i>{{ question.views }} {% trans 'Views' %}
-    {% endif %}
-
-    <span class="text-secondary">
-      {% if question.status in 'approved published answered'|split %}
-        {{ question.status_changed|timeuntil }}
-      {% else %}
-        {{ question.get_status_display }}
+      {% if question.status != 'closed' %}
+        <span class="text-{{ question|question_status_class }}">
+          <i class="bi bi-{{ question|question_status_icon }}"></i>
+          {{ question.get_status_display }}
+        </span>
       {% endif %}
-    </span>
-  </div>
-  <hr />
+
+      {% if question.status in 'answered closed'|split %}
+        <i class="bi bi-chat-left"></i>{{ question.comments|length }} {% trans 'Comments' %}
+      {% endif %}
+
+      {% if question.status == 'closed' %}
+        <i class="bi bi-hand-thumbs-up"></i>{{ question.likes|length }} {% trans 'Likes' %}
+        <i class="bi bi-hand-thumbs-down"></i>{{ question.dislikes|length }} {% trans 'Dislikes' %}
+      {% endif %}
+
+      {% if question.status in 'published answered closed'|split %}
+        <i class="bi bi-eye"></i>{{ question.views|length }} {% trans 'Views' %}
+      {% endif %}
+
+      <span class="text-secondary">
+        {% if question.status in 'approved published answered'|split %}
+          {{ question.status_changed|timeuntil }}
+        {% else %}
+          {{ question.get_status_display }}
+        {% endif %}
+      </span>
+    </div>
+    <hr />
+  {% endif %}
 
   {% for answer in object_list %}
     <div class="d-flex m-3">
@@ -61,4 +65,15 @@
     </div>
     <hr />
   {% endfor %}
+
+  {% if question.author != request.user and question.status == 'published' %}
+    <a href="{% url 'answers:create' question_id=question.id country_id=question.country_id %}" class="btn btn-primary">
+      {% trans 'Add new answer' %}
+    </a>
+  {% endif %}
+  {% if question.author == request.user and question.status == 'draft' %}
+    <a href="{% url 'questions:publish' pk=question.id country_id=question.country_id %}" class="btn btn-primary">
+      {% trans 'Send to moderation' %}
+    </a>
+  {% endif %}
 {% endblock main %}
