Add subscriptions and likes

--- a/templates/answers/list.html
+++ b/templates/answers/list.html
@@ -11,13 +11,13 @@
   {% if question %}
     {# TODO: Split with sub templates #}
     <div class="m-3">
-      <header class="h3">{{ question.en_text }}</header>
+      <header class="h3">{{ question.truncated_en_text }}</header>
       <span>{{ question.en_text }}</span>
 
       <hr />
 
       <a href="{% url 'likes:toggle_subscription' country_id=question.country_id question_id=question.id %}">
-        <i class="bi bi-star{% if question|liked_by_me:request %}-fill{% endif %}"></i>
+        <i class="bi bi-star{% if question|subscribed:request %}-fill{% endif %}"></i>
       </a>
       {{ question.country }} <i class="bi bi-coin"></i> {{ question.price }}
 
@@ -71,9 +71,25 @@
       {% trans 'Add new answer' %}
     </a>
   {% endif %}
+
   {% if question.author == request.user and question.status == 'draft' %}
     <a href="{% url 'questions:publish' pk=question.id country_id=question.country_id %}" class="btn btn-primary">
       {% trans 'Send to moderation' %}
+    </a>
+  {% endif %}
+
+  {% if question.author != request.user and question.status == 'answered' %}
+    <a
+        href="{% url 'likes:like' country_id=question.country_id question_id=question.id %}"
+        class="btn btn-{% if not question|liked_by_me:request %}outline-{% endif %}success"
+    >
+      <i class="bi bi-hand-thumbs-up-fill"></i> {% trans 'Like' %}
+    </a>
+    <a
+        href="{% url 'likes:dislike' country_id=question.country_id question_id=question.id %}"
+        class="btn btn-{% if not question|disliked_by_me:request %}outline-{% endif %}danger"
+    >
+      <i class="bi bi-hand-thumbs-down-fill"></i> {% trans 'Dislike' %}
     </a>
   {% endif %}
 {% endblock main %}
