--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -20,6 +20,7 @@
 			<input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
 		{% endif %}
 		<div class="row mt-4">
+      {% trans 'by registering on the site you accept and agree to the processing of personal data' %}
 			<div class="col text-end">
 				<button type="submit" class="btn btn-primary rounded-pill py-2 px-5">{% trans "Sign Up" %}</button>
 			</div>
