--- a/templates/answers/list.html
+++ b/templates/answers/list.html
@@ -1,4 +1,5 @@
-{% extends "layout.html" %}
+{% extends "layout.html" %}  {# TODO: remove double quotes from templates #}
+{% load answers %}
 {% load likes %}
 {% load questions_status %}
 {% load i18n %}
@@ -17,7 +18,7 @@
       <hr />
 
       <a href="{% url 'likes:toggle_subscription' country_id=question.country_id question_id=question.id %}">
-        <i class="bi bi-star{% if question|subscribed:request %}-fill{% endif %}"></i>
+        <i class="bi bi-star{% if question|subscribed:request.user %}-fill{% endif %}"></i>
       </a>
       {{ question.country }} <i class="bi bi-coin"></i> {{ question.price }}
 
@@ -29,16 +30,7 @@
       {% endif %}
 
       {% if question.status in 'answered closed'|split %}
-        <i class="bi bi-chat-left"></i>{{ question.comments|length }} {% trans 'Comments' %}
-      {% endif %}
-
-      {% if question.status == 'closed' %}
-        <i class="bi bi-hand-thumbs-up"></i>{{ question.likes|length }} {% trans 'Likes' %}
-        <i class="bi bi-hand-thumbs-down"></i>{{ question.dislikes|length }} {% trans 'Dislikes' %}
-      {% endif %}
-
-      {% if question.status in 'published answered closed'|split %}
-        <i class="bi bi-eye"></i>{{ question.views|length }} {% trans 'Views' %}
+        <i class="bi bi-chat-left"></i>{{ question.answer_set.count }} {% trans 'Answers' %}
       {% endif %}
 
       <span class="text-secondary">
@@ -48,49 +40,35 @@
           {{ question.get_status_display }}
         {% endif %}
       </span>
+
+      {% include 'users/_avatar.html' with user=question.author %}
+      {{ question.author.username }}
     </div>
+    {% if question.status in 'rejected draft'|split and question.reason %}
+      <div class="ms-5"><b>{% trans 'Reason' %}:</b> {{ question.reason }}</div>
+    {% endif %}
     <hr />
   {% endif %}
 
   {% for answer in object_list %}
     <div class="d-flex m-3">
-      {% if answer.author.avatar %}
-        <img class="rounded-circle" style="height: 24px" alt="{% trans 'Avatar' %}" src="{{ answer.author.avatar.url }}" />
-      {% else %}
-        <i class="bi bi-person-circle"></i>
-      {% endif %}
+      {% include 'answers/_answer.html' with answer=answer %}
+
       <div class="ms-3">
-        {{ answer.truncated_en_text }}
+        <a href="{% url 'answers:detail' pk=answer.id question_id=answer.question_id country_id=answer.question.country_id %}">
+          {{ answer.truncated_en_text }}
+        </a>
       </div>
     </div>
 
-    {% if answer.question.author != request.user and question.status == 'answered' %}
-      <a
-          href="{% url 'likes:like' country_id=answer.question.country_id content_type=answer|content_type pk=answer.id %}"
-          class="btn btn-{% if not answer|liked_by_me:request %}outline-{% endif %}success"
-      >
-        <i class="bi bi-hand-thumbs-up-fill"></i> {% trans 'Like' %}
-      </a>
-      <a
-          href="{% url 'likes:dislike' country_id=answer.question.country_id content_type=answer|content_type pk=answer.id %}"
-          class="btn btn-{% if not answer|disliked_by_me:request %}outline-{% endif %}danger"
-      >
-        <i class="bi bi-hand-thumbs-down-fill"></i> {% trans 'Dislike' %}
-      </a>
-    {% endif %}
+    {% include 'likes/_for_answer.html' with answer=answer %}
 
     <hr />
   {% endfor %}
 
-  {% if question.author != request.user and question.status == 'published' %}
+  {% if question.author != request.user and question.status == 'published' and question|is_not_answered_by_me:request.user %}
     <a href="{% url 'answers:create' question_id=question.id country_id=question.country_id %}" class="btn btn-primary">
       {% trans 'Add new answer' %}
-    </a>
-  {% endif %}
-
-  {% if question.author == request.user and question.status == 'draft' %}
-    <a href="{% url 'questions:publish' pk=question.id country_id=question.country_id %}" class="btn btn-primary">
-      {% trans 'Send to moderation' %}
     </a>
   {% endif %}
 {% endblock main %}
