--- a/templates/likes/list.html
+++ b/templates/likes/list.html
@@ -4,6 +4,6 @@
 {% block title %}{% trans "Likes" %}{% endblock title %}
 {% block main %}
   {{ block.super }}
-  {% include '_countries.html' with url_name='likes:my' %}
-  {% include 'questions/_questions_list.html' with questions=object_list %}
+  {% include '_countries.html' with url_name='likes:subscriptions' %}
+  TODO
 {% endblock main %}
