--- a/templates/_countries.html
+++ b/templates/_countries.html
@@ -1,7 +1,7 @@
 {% load i18n %}
 
 <div class="dropdown">
-  <button class="btn btn-link dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button class="btn btn-link dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
     {% trans 'Countries' %}
   </button>
 
