--- a/templates/users/me.html
+++ b/templates/users/me.html
@@ -1,8 +1,18 @@
 {% extends "layout.html" %}
+{% load crispy_forms_filters %}
 {% load i18n %}
 
 {% block title %}{% trans "Avatar" %}{% endblock title %}
 {% block main %}
   {{ block.super }}
-  {{ request.user }}
+  {% if request.user.avatar %}
+    <img class="rounded-circle w-100" alt="{% trans 'Avatar' %}" src="{{ request.user.avatar.url }}" />
+  {% else %}
+    <i class="bi bi-person-circle ms-5"></i>
+  {% endif %}
+	<form enctype="multipart/form-data" method="POST" action="{% url 'users:me' %}">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary">{% trans 'Change avatar' %}</button>
+  </form>
 {% endblock main %}
