--- a/templates/_navbar.html
+++ b/templates/_navbar.html
@@ -29,11 +29,11 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="{% url 'account_logout' %}">{% trans "Log out" %}</a>
+                <a class="btn btn-outline-primary" href="{% url 'account_logout' %}">{% trans "Log out" %}</a>
               </li>
             {% else %}
-              <li class="nav-item"><a class="nav-link" href="{% url 'account_login' %}">{% trans "Log in" %}</a></li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
+              <li class="nav-item"><a class="btn btn-outline-primary" href="{% url 'account_login' %}">{% trans "Log in" %}</a></li>
+              <li class="nav-item"><a class="btn btn-outline-primary" href="{% url 'account_signup' %}">{% trans "Sign Up" %}</a></li>
             {% endif %}
           </ul>
         {% endblock %}
