--- a/templates/likes/list.html
+++ b/templates/likes/list.html
@@ -5,5 +5,12 @@
 {% block main %}
   {{ block.super }}
   {% include '_countries.html' with url_name='likes:subscriptions' %}
-  TODO
+  <ul class="d-flex flex-column">
+    {% for like in object_list %}
+      <li class="d-flex">
+        {% include 'users/_avatar.html' with user=like.user %}
+        {{ like.user.username }}
+      </li>
+    {% endfor %}
+  </ul>
 {% endblock main %}
